[gd_scene load_steps=9 format=2]

[ext_resource path="res://res/fonts/Freaky Witches.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://screens/GameOverScreen.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title Game Over:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Title"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title Game Over:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 65
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Punkte:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/Punkte:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "popup"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Punkte:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 2, 2 ), Vector2( 1.5, 1.5 ) ]
}

[node name="ColorRect" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 388.0
margin_bottom = 600.0

[node name="TitlePlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer"]
autoplay = "Title"
anims/RESET = SubResource( 1 )
anims/Title = SubResource( 2 )

[node name="Title Game Over" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 388.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 150, 0 )
custom_fonts/font = SubResource( 3 )
text = "Game Over"
align = 1

[node name="Popup" type="AnimationPlayer" parent="MarginContainer/VBoxContainer"]
root_node = NodePath("../../..")
autoplay = "popup"
anims/RESET = SubResource( 4 )
anims/popup = SubResource( 5 )

[node name="Punkte" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 388.0
margin_bottom = 208.0
rect_scale = Vector2( 1e-05, 1e-05 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Punkte"]
margin_right = 388.0
margin_bottom = 22.0

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/Punkte/HBoxContainer"]
margin_right = 69.0
margin_bottom = 22.0
text = "Punkte: "

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Punkte/HBoxContainer"]
margin_left = 73.0
margin_right = 113.0
margin_bottom = 22.0
text = "0000"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Punkte"]
margin_top = 26.0
margin_right = 388.0
margin_bottom = 48.0

[node name="Ebenen" type="Label" parent="MarginContainer/VBoxContainer/Punkte/HBoxContainer2"]
margin_right = 69.0
margin_bottom = 22.0
text = "Ebenen: "

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Punkte/HBoxContainer2"]
margin_left = 73.0
margin_right = 113.0
margin_bottom = 22.0
text = "0000"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 388.0
margin_bottom = 387.0
size_flags_vertical = 5

[node name="Coins" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 388.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/Coins"]
margin_right = 78.0
margin_bottom = 22.0
text = "Münzen: "

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/Coins"]
margin_left = 82.0
margin_right = 170.0
margin_bottom = 22.0
text = "_muenzen"

[node name="Herzen" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 388.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/Herzen"]
margin_right = 69.0
margin_bottom = 22.0
text = "Herzen: "

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/Herzen"]
margin_left = 73.0
margin_right = 143.0
margin_bottom = 22.0
text = "_herzen"

[node name="JumpBoost" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 52.0
margin_right = 388.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/JumpBoost"]
margin_right = 109.0
margin_bottom = 22.0
text = "Jump Boost: "

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/JumpBoost"]
margin_left = 113.0
margin_right = 228.0
margin_bottom = 22.0
text = "_jump_boost"

[node name="CoinRain" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 78.0
margin_right = 388.0
margin_bottom = 100.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/CoinRain"]
margin_right = 129.0
margin_bottom = 22.0
text = "Münzenregen: "

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/CoinRain"]
margin_left = 133.0
margin_right = 229.0
margin_bottom = 22.0
text = "_coin_rain"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/CoinRain"]
margin_left = 233.0
margin_right = 388.0
margin_bottom = 22.0
text = "_coins_coin_rain"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 524.0
margin_right = 388.0
margin_bottom = 600.0
size_flags_vertical = 10

[node name="Again" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer3"]
margin_right = 388.0
margin_bottom = 36.0
text = "Nochmal"

[node name="StartScreen" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer3"]
margin_top = 40.0
margin_right = 388.0
margin_bottom = 76.0
text = "Hauptmenü"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer3/Again" to="." method="_on_Again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer3/StartScreen" to="." method="_on_StartScreen_pressed"]
